<resources>
    <string name="app_name" translatable="false">RoleWorld</string>

    <string name="check_connection">check connection</string>
    <string name="welcome_to_roleworld">Welcome to RoleWorld</string>
    <string name="tap_to_continue">tap to continue</string>
    <string name="input_nickname_hint">name</string>
    <string name="input_email_hint">email</string>
    <string name="input_password_hint">password</string>
    <string name="input_repeat_password_hint">repeat password</string>
    <string name="continue_btn">continue</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="user_already_exists">user already exists</string>
    <string name="sign_in_fail">email or password incorrect</string>
    <string name="passwords_isnt_equals">passwords isn\'t equals</string>
    <string name="empty_field">empty field</string>
    <string name="characters">characters</string>
    <string name="worlds">worlds</string>
    <string name="log_out">log out</string>
    <string name="log_out_ask">Exit from account?</string>
    <string name="back">back</string>
    <string name="exit">exit</string>
    <string name="dont_have_any_friends">You don\'t have any friends :(</string>
    <string name="friends">friends</string>
    <string name="dont_have_any_characters">You don\'t have any characters :(</string>
    <string name="done">done</string>
    <string name="add_field">add field</string>
    <string name="world">world</string>
    <string name="character">character</string>
    <string name="field_name">field name</string>
    <string name="field_data">data</string>
    <string name="offline">offline</string>
</resources>