<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:background="@color/gray_bg">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/back_arrow"
            android:id="@+id/settings_back_btn"
            android:tint="@color/contrast"
            android:tintMode="src_atop"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:id="@+id/profile_settings_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="start">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/default_user_avatar"
                    app:shapeAppearance="@style/RoundImageViewShape"
                    android:id="@+id/settings_user_avatar"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/edit_btn_icon"
                    android:background="@drawable/edit_btn"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="7dp"
                    android:tint="@color/contrast"
                    android:tintMode="src_atop"
                    android:id="@+id/settings_edit_user_avatar"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:hint="@string/input_nickname_hint"
                    android:textColor="@color/contrast"
                    android:textColorHint="@color/gray_text"
                    android:id="@+id/settings_nickname_input"
                    android:textSize="18sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="false"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="5dp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_user_email"
                    android:background="#0000"
                    android:textSize="14sp"
                    android:textColor="@color/gray_text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="false"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="id: "
                        android:textSize="14sp"
                        android:textColor="@color/gray_text"
                        android:paddingStart="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/settings_user_id"
                        android:textColor="#aaa"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#f00"
        android:text="@string/log_out"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:id="@+id/user_profile_settings_account_exit"/>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_view_bg"
        android:visibility="gone"
        android:id="@+id/user_profile_settings_account_exit_dialog">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/log_out_ask"
            android:translationY="-20dp"
            android:textSize="19sp"
            android:textColor="@color/gray_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back"
                android:gravity="center"
                android:textSize="19sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit"
                android:gravity="center"
                android:textSize="19sp"
                android:textColor="#f00"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>