<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:background="@color/header_bg">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/burger_menu_anim"
            android:id="@+id/open_close_menu_btn"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/add_icon"
            android:id="@+id/add"/>
    </RelativeLayout>
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menu_flipper"
        android:layout_marginTop="50dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/worlds_scroll">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/worlds_layout"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="нет активных миров :("
                    android:textSize="17sp"
                    android:textColor="@color/gray_text"
                    android:layout_gravity="center"
                    android:id="@+id/not_worlds"
                    android:layout_marginTop="30dp" />
            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/characters_scroll">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/characters_layout"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="нет персонажей :("
                    android:textSize="17sp"
                    android:textColor="@color/gray_text"
                    android:layout_gravity="center"
                    android:id="@+id/not_characters"
                    android:layout_marginTop="30dp" />
            </LinearLayout>
        </ScrollView>
    </ViewFlipper>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#000"
        android:alpha="0.0"
        android:id="@+id/darkening"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="100dp"
        android:background="@drawable/dialog_view_bg"
        android:id="@+id/constructor"
        android:orientation="vertical"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:visibility="gone"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/world"
                        android:gravity="center"
                        android:id="@+id/constructor_selector_world"
                        android:background="@drawable/constructor_selected_cursor"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/character"
                        android:gravity="center"
                        android:id="@+id/constructor_selector_character"/>
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/constructor_avatar"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/RoundImageViewShape"
                android:src="@drawable/default_user_avatar"
                android:layout_marginVertical="20dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constructor_fields_scroll">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/constructor_fields_layout"
                    android:divider="@color/contrast"
                    android:dividerPadding="15dp"
                    android:showDividers="middle">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:id="@+id/constructor_add_field">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_field"
                            android:textColor="@color/contrast"
                            android:layout_marginRight="5dp"/>
                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/add_icon"
                            android:tint="@color/contrast"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/done"
            android:textColor="@color/contrast"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/constructor_done"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@color/header_bg"
        android:id="@+id/app_menu_layout"
        android:translationX="-301dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:src="@drawable/default_user_avatar"
                android:id="@+id/app_menu_user_avatar"
                app:shapeAppearance="@style/RoundImageViewShape"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_alignParentTop="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/contrast"
                    android:id="@+id/app_menu_user_nickname"
                    android:layout_marginBottom="6dp"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_text"
                    android:id="@+id/app_menu_user_email"
                    android:singleLine="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="id: "
                        android:textSize="14sp"
                        android:textColor="@color/gray_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/app_menu_user_id"
                        android:textColor="#aaa"
                        android:singleLine="true"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/settings"
                android:tint="@color/contrast"
                android:tintMode="src_atop"
                android:id="@+id/user_profile_settings" />
        </RelativeLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="@string/worlds"
            android:id="@+id/app_menu_worlds_btn"
            android:background="@drawable/active_menu_btn_bg"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="@string/characters"
            android:id="@+id/app_menu_characters_btn"
            android:background="@color/header_bg"/>
    </LinearLayout>
</RelativeLayout>